assets/sass/_header.scss
.navigation {
  height: 6rem;
  width: 100%;

  a,
  span {
    display: inline;
    font-size: 1.7rem;
    font-family: $font-family;
    font-weight: 600;
    color: $fg-color;
  }

  a {

    &:hover,
    &:focus {
      color: $link-color;
    }
  }

  i {
    color: $fg-color;
    cursor: pointer;

    &:hover,
    &:focus {
      color: $link-color;
    }
  }

  .navigation-brand {
    float: left;
    letter-spacing: 0.1rem;
    text-transform: uppercase;
  }

  .navigation-list {
    float: left;
    list-style: none;
    margin-bottom: 0;
    margin-top: 0;

    @media only screen and (max-width: 768px) {
      position: relative;
      top: 2rem;
      right: 0;
      z-index: 5;
      visibility: hidden;
      opacity: 0;
      padding: 0;
      max-height: 0;
      width: 100%;
      background-color: $bg-color;
      border-top: solid 2px $alt-bg-color;
      border-bottom: solid 2px $alt-bg-color;
      transition: opacity 0.25s, max-height 0.15s linear;
    }

    .navigation-item {
      float: left;
      margin: 0;
      position: relative;

      @media only screen and (max-width: 768px) {
        float: none !important;
        text-align: center;

        a,
        span {
          line-height: 5rem;
        }
      }

      a,
      span {
        margin-left: 1rem;
        margin-right: 1rem;
      }
    }
  }

  .navigation-social {
    float: right;
    list-style: none;
    margin-bottom: 0;
    margin-top: 0.1rem;

    @media only screen and (max-width: 768px) {
      position: relative;
      top: 2rem;
      right: 0;
      z-index: 5;
      visibility: hidden;
      opacity: 0;
      padding: 0;
      max-height: 0;
      width: 100%;
      background-color: $bg-color;
      border-top: solid 2px $alt-bg-color;
      border-bottom: solid 2px $alt-bg-color;
      transition: opacity 0.25s, max-height 0.15s linear;
    }

    .navigation-item {
      float: left;
      margin: 0;
      position: relative;

      @media only screen and (max-width: 768px) {
        float: none !important;
        text-align: center;

        a,
        span {
          line-height: 5rem;
        }
      }

      a,
      span {
        margin-left: 1rem;
        margin-right: 1rem;
      }
    }
  }

  #dark-mode {
    padding-right: 0.25rem;
    padding-left: 0.25rem;
    margin-top: 0.25rem;
    float: right;
  }

  .btn-link {
    border: none;
    background: none;
  }

  .toggle-dark {
    display: block;
  }

  .toggle-light {
    display: none;
  }
}

